--- a/templates/kubernetes_master.j2
+++ b/templates/kubernetes_master.j2
@@ -336,12 +336,15 @@ Name = "squid"
 depends_on        = [ aws_vpc.kubernetes_vpc]
 }
 
+local {
+global_security_group_ids = [aws_security_group.allow_ssh.id,aws_security_group.kubernetes_default_sg.id,aws_security_group.allow_kubernetes_master.id,aws_security_group.allow_squid.id,aws_security_group.allow_api.id]
+}
 resource "aws_instance" "kuber_master_ec2_instance" {
   ami =  "ami-000db10762d0c4c05"
   instance_type = "{{TYPE_EC2_INSTANCE}}"
   iam_instance_profile = aws_iam_instance_profile.kubernetes_iam_aws_instance.name
   subnet_id = aws_subnet.kubernetes_public_subnet.id
-  vpc_security_group_ids = [aws_security_group.allow_ssh.id,aws_security_group.kubernetes_default_sg.id,aws_security_group.allow_kubernetes_master.id,aws_security_group.allow_squid.id,aws_security_group.allow_api.id]
+  vpc_security_group_ids = local.global_security_group_ids
   key_name = aws_key_pair.deployer.key_name
   root_block_device {
       volume_size = {{ HARD_DISK_SIZE}}
@@ -352,11 +355,12 @@ resource "aws_instance" "kuber_master_ec2_instance" {
 }
 
 output "KEY_NAME_DEPLOYER" {
-
      value = aws_key_pair.deployer.key_name
-
 }
 
+output "SECURITY_GROUP_GLOBL" {
+    value =  local.global_security_group_ids
+}
 output "KUBE_MASTER_PRIVATE_IP" {
     value = aws_instance.kuber_master_ec2_instance.private_ip
 }
