Finally the solution is done

--- a/templates/kubernetes_node.j2
+++ b/templates/kubernetes_node.j2
@@ -2,7 +2,7 @@ terraform {
 
   backend "s3" {
     bucket = "{{ BUCKET }}"
-    key    = "autodeploy"
+    key    = "node"
     region = "{{ AWS_FIRST_REGION }}"
 }
 
@@ -19,19 +19,19 @@ provider "aws" {
   region  = "{{ AWS_FIRST_REGION  }}"
 }
 
-{% for NODE_NUMBER in range(NODE_AMOUNT) %}
-{{ i }}
+
+{% for NODE_NUMBER in range(NODE_AMOUNT|int) %}
 
 resource "aws_instance" "kuber_node_ec2_instance_{{ NODE_NUMBER }}" {
-  ami  = "{{ RED_HAT_IMAGE_AMI} }"
+  ami  = "{{ RED_HAT_IMAGE_AMI }}"
   instance_type = "{{ TYPE_EC2_INSTANCE }}"
-  subnet_id =  "{{ PRIVATE_SUBNET}}
-  iam_instance_profile = {{ IAM_INSTANCE_PROFILE }}
-  vpc_security_group_ids = [
+  subnet_id =  "{{ PRIVATE_SUBNET }}"
+  iam_instance_profile = "{{ IAM_INSTANCE_PROFILE }}"
+  vpc_security_group_ids =  {{ SECURITY_GROUP_GLOBAL | replace("'", "\"") }}
   key_name = "{{ KEY_NAME_DEPLOYER }}"
   source_dest_check = false
   root_block_device {
-      volume_size = {{ HARD_DISK_SIZE}}
+      volume_size = {{ HARD_DISK_SIZE }}
   }
 
   tags = {
