--- a/templates/kubernetes_master.j2
+++ b/templates/kubernetes_master.j2
@@ -2,7 +2,7 @@ terraform {
 
   backend "s3" {
     bucket = "{{ BUCKET }}"
-    key    = "autodeploy"
+    key    = "master"
     region = "{{ AWS_FIRST_REGION }}"
 }
 
@@ -16,13 +16,12 @@ terraform {
 
 provider "aws" {
   profile = "default"
-  region  = "{{ AWS_FIRST_REGION  }}"
+  region  = "{{ AWS_FIRST_REGION }}"
 }
 
 
 resource "aws_iam_role" "kubernetes_role" {
   name = "kubernetes"
-
   assume_role_policy = <<END
 {
   "Version": "2012-10-17",
@@ -106,7 +105,7 @@ resource "aws_route53_record" "kubernetes_private_route53_route" {
 
 resource "aws_subnet" "kubernetes_public_subnet" {
   vpc_id     = aws_vpc.kubernetes_vpc.id
-  cidr_block = " {{ IP_PUBILC_RANGE }}"
+  cidr_block = "{{ IP_PUBILC_RANGE }}"
   map_public_ip_on_launch = true
   depends_on = [aws_internet_gateway.kubernetes_gw]
   tags = {
@@ -336,24 +335,29 @@ Name = "squid"
 depends_on        = [ aws_vpc.kubernetes_vpc]
 }
 
-local {
+locals {
 global_security_group_ids = [aws_security_group.allow_ssh.id,aws_security_group.kubernetes_default_sg.id,aws_security_group.allow_kubernetes_master.id,aws_security_group.allow_squid.id,aws_security_group.allow_api.id]
+iam_instance_profile = aws_iam_instance_profile.kubernetes_iam_aws_instance.name
 }
+
 resource "aws_instance" "kuber_master_ec2_instance" {
-  ami =  " {{ RED_HAT_IMAGE_AMI }}"
+  ami =  "{{ RED_HAT_IMAGE_AMI }}"
   instance_type = "{{ TYPE_EC2_INSTANCE }}"
-  iam_instance_profile = aws_iam_instance_profile.kubernetes_iam_aws_instance.name
+  iam_instance_profile =  local.iam_instance_profile
   subnet_id = aws_subnet.kubernetes_public_subnet.id
   vpc_security_group_ids = local.global_security_group_ids
   key_name = aws_key_pair.deployer.key_name
   root_block_device {
-      volume_size = {{ HARD_DISK_SIZE}}
+      volume_size = {{ HARD_DISK_SIZE }}
   }
   tags = {
     Name        = "kubernetes_deploy"
   }
 }
 
+output "IAM_INSTANCE_PROFILE" {
+    value = local.iam_instance_profile
+}
 output "KEY_NAME_DEPLOYER" {
      value = aws_key_pair.deployer.key_name
 }
@@ -363,7 +367,7 @@ output "SECURITY_GROUP_GLOBAL" {
 }
 
 output "PRIVATE_SUBNET" {
-    value =   aws_subnet.kubernetes_private_subnet.id
+    value =  aws_subnet.kubernetes_private_subnet.id
 }
 output "KUBE_MASTER_PRIVATE_IP" {
     value = aws_instance.kuber_master_ec2_instance.private_ip
